--- a/YHNavigationBarExample/Example/ExampleViewController.xib
+++ b/YHNavigationBarExample/Example/ExampleViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -125,12 +125,21 @@
                         <constraint firstAttribute="trailing" secondItem="VRB-6e-d9R" secondAttribute="trailing" id="w8F-rl-8xx"/>
                     </constraints>
                 </scrollView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="example" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ygr-fO-w6w">
+                    <rect key="frame" x="0.0" y="862" width="414" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="Ygr-fO-w6w" firstAttribute="top" secondItem="8mW-Xu-lbs" secondAttribute="bottom" id="SGx-Tj-br6"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="8mW-Xu-lbs" secondAttribute="bottom" id="grs-cF-CfP"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="8mW-Xu-lbs" secondAttribute="trailing" id="idf-fW-pzd"/>
+                <constraint firstItem="Ygr-fO-w6w" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="igY-TS-iJp"/>
+                <constraint firstAttribute="trailing" secondItem="Ygr-fO-w6w" secondAttribute="trailing" id="lyj-6r-iiv"/>
                 <constraint firstItem="8mW-Xu-lbs" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="oGn-kQ-Adg"/>
                 <constraint firstItem="8mW-Xu-lbs" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="yDf-7K-9ss"/>
             </constraints>
